(+) materi rwd dan bootstrap

--- a/display/layouting/index.html
+++ b/display/layouting/index.html
@@ -29,7 +29,20 @@
 
                 <div class="video kecil">
                     <div class="cover">
+
                         <img src="https://images.unsplash.com/photo-1631970840760-61f9f630684f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80" alt="">
+
+                    </div>
+
+                    <div class="overlay">
+
+                        <div class="text-box">
+
+                            <h5>Judul Artikel</h5>
+                            <p>Lorem ipsum dolor sit amet</p>
+
+                        </div>
+
                     </div>
                 </div>
 
@@ -37,6 +50,22 @@
                     <div class="cover">
                         <img src="https://images.unsplash.com/photo-1632052865337-c80888f69435?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80" alt="">
                     </div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="wrapper">
+
+            <div class="container">
+
+                <div class="sidebar">
+
+                </div>
+
+                <div class="content">
+                    
                 </div>
 
             </div>
